--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+environment:
+  sdk: ">=2.0.0 <3.0.0"
+  flutter: ">=0.8.2 <2.0.0"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
